# ffdh

./: Cargo.toml  LICENSE-MIT  flake.nix  readme.md
src/: lib.rs
