[package]
name = "ffdh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
openssl = { version = "0.10.42", features = ["vendored"], optional = true}
pkcs8 = { version = "0.9.0", features = ["pem"] }
rand = "0.8"
sha3 = "0.10.6"

[features]
test_openssl = ["dep:openssl"]
